build/apps/prox-proxy/base/resources/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prox-proxy
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "4"
  labels:
    app.kubernetes.io/name: prox-proxy
spec:
  externalName: 192.168.40.18
  ports:
    - name: prox-proxy
      port: 8006  #80
      targetPort: 8006
  type: ExternalName
  selector:
    app.kubernetes.io/instance: prox-proxy
    task: prox-proxy
