build/apps/prox-proxy/base/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prox-proxy
  labels:
    app.kubernetes.io/name: prox-proxy
  annotations:
    cert-manager.io/cluster-issuer: route53-letsencrypt-staging
    #external-dns.alpha.kubernetes.io/target: infra.anotherlife.pl
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "4"

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      #match: Host(`hello.<secret:private-domain>`)
      match: Host(`prox-proxy.anotherlife.pl`)
      services:
        - kind: TraefikService #Service
          name: prox-proxy
          port: 80 #80
      middlewares:
        - name: chain-traefik-dashboard #home-whitelist #headers #traefik-dashboard-auth  #chain-traefik-dashboard
          namespace: traefik
  tls:
    #secretName: letsencrypt-staging
    options:
      name: tls-ver13
      namespace: traefik
    domains:
      - main: anotherlife.pl
        sans:
          - .anotherlife.pl
